small change added to index.html

--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,7 @@
                  </head>
     <body>
         <h1>Welcome to Coursera's web dev class</h1>
+        <h2>see this small change</h2>
         
     </body>
 </html>
