--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,8 @@
                  </head>
     <body>
         <h1>Welcome to Coursera's web dev class</h1>
-        <h2>see this small change</h2>
+        <h2>so many windows</h2>
+       <p> <a href="structure.html"</a> structure</p>
         
     </body>
 </html>
