--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Welcome to Coursera's web dev class</h1>
         <h2>so many windows</h2>
-       <p> <a href="structure.html"</a> structure</p>
+       <p> <a href="structure.html">structure</a></p>
         
     </body>
 </html>
