completion of css lessons

--- a/mod_2/index.html
+++ b/mod_2/index.html
@@ -4,15 +4,20 @@
         <meta charset="utf-8">
             <meta http-equiv="X-UA-Compatible" content="IE=edge">
                 <meta name="viewport" content="width=device-width, initial-scale=1">
-                      <link rel="stylesheet" href="css/mod_2.css">
-            <title>Chez g</title>
+                      <link rel="stylesheet" href="css/responsive.css">
+            <title>Chez Y</title>
             </head>
     <body>
-        <h1>Le Menu Chez g</h1>
+        <h1>What Did I Do...To Be So Black and Blue - Responsively...</h1>
         
-        <p id="p1"></p>
-        <p id="p2"></p>
-        
-    </body>
+        <div id="container1">
+          <div class="row">
+                <div class="col-lg-4 col-md-6"><h4 id="menuTitle1">chicken</h4></div>
+                <div class="col-lg-4 col-md-6"><p>hmmm..2</p></div>
+                <div class="col-lg-4 col-md-12"><p>hmmm..3</p></div>
+         </div>
+        </div>
+        </body>
 </html>
+
 
